[package]
name = "iot-server-template"
version = "0.1.0"
edition = "2021"
authors = ["zifeng.1024@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["color", "suggestions", "derive"] }
thiserror = "1.0.37"
anyhow = "1.0.65"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
bytes = "1.2.1"
futures-util = "0.3.24"
futures = "0.3.18"
serde = { version = "1.0.145", features = ["derive"] }
once_cell = "1.15.0"
chrono = "0.4.22"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = { version = "0.1.8", optional = true }
config = { version = "0.13.2", features = ["toml"]}

[features]
console = ["tokio-tracking", "dep:console-subscriber"]
tokio-tracking = ["tokio/tracing"]