[package]
name = "iot-server-template"
version = "0.1.0"
edition = "2021"
authors = ["zifeng.1024@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/egccri-future-util"
]

[dependencies]
egccri-future-util = { path = "crates/egccri-future-util" }
clap = { version = "4.0.15", features = ["color", "suggestions", "derive"] }
thiserror = "1.0.37"
anyhow = "1.0.65"
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = "1.2.1"
futures-util = "0.3.24"
futures = "0.3.18"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1" }
once_cell = "1.15.0"
chrono = "0.4.22"
time = "0.3.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
console-subscriber = { version = "0.1.8", optional = true }
tracing-appender = "0.2"
config = { version = "0.13.2", features = ["toml"] }
openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"], optional = true }
tonic = { version = "0.9.2", optional = true }

[build-dependencies]
tonic-build = "0.9.2"

[workspace.package]
version = "0.0.0"
authors = ["zifeng <zifeng.1024@gmail.com>"]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec", "time"] }


[features]
default = ["raft-store"]
console = ["tokio-tracking", "dep:console-subscriber"]
tokio-tracking = ["tokio/tracing"]
raft-store = ["dep:openraft", "dep:tonic"]
redis = []