[package]
name = "pool"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
tonic = "0.9.2"
